classroom/src/app/text-view/text-view.component.css
.container {
  width: 100%;
  height: calc(100vh - 64.5px);
}
.sidebar {
  overflow: auto;
  height: 100%;
}

.cluster-name {
  white-space: nowrap;
}
.tooltip-icon {
  font-size: small;
}
.cluster-detail {
  overflow: hidden;
}
.cluster-row td {
  border-bottom-width: 0;
}
tr.cluster-detail-row {
  height: 0;
  min-height: 0;
}

.pattern-table {
  margin-left: 3em;
  overflow: auto;
  max-height: calc(30vh);
}

.mat-column-count {
  text-align: right;
}

.text_content {
  padding-left: 18px;
  padding-right: 18px;
  line-height: 175%;
  max-width: 6.5in;
}

